<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="default_web_client_id" translatable="false">997068182928-rv7vtailtqrup3hdenre58gu5r56rim6.apps.googleusercontent.com</string>
    <string name="facebook_application_id" translatable="false">715835957796601</string>
    <string name="facebook_client_token" translatable="false">b4a46918ca2077ac16f452f338c5c0ef</string>
    <string name="reward_id" translatable="false">ca-app-pub-2988542829837428/4063099553</string>
    <string name="interstitial_fragment_id" translatable="false">ca-app-pub-2988542829837428/8011751723</string>
    <string name="smart_banner_activity_picker_id" translatable="false">ca-app-pub-2988542829837428/5106386789</string>
    <string name="smart_banner_app_picker_id" translatable="false">ca-app-pub-2988542829837428/6497691209</string>
    <string name="smart_banner_app_picker_multi_id" translatable="false">ca-app-pub-2988542829837428/9133261708</string>
    <string name="smart_banner_main_id" translatable="false">ca-app-pub-2988542829837428/3793305110</string>
    <string name="google_play_services" translatable="false">Google Play Services</string>
    <string name="license_android_open_source" translatable="false">The Android Open Source Project</string>
    <string name="gson" translatable="false">GSON</string>
    <string name="license_google_inc" translatable="false">Copyright © Google Inc.</string>
    <string name="volley" translatable="false">Volley</string>
    <string name="license_volley" translatable="false">Xiaoke Zhang &amp; The Android Open Source Project</string>
    <string name="speechutils" translatable="false">Speechutils</string>
    <string name="license_kaarel_kaljurand" translatable="false">Copyright © Kaarel Kaljurand</string>
    <string name="microsoft_translator" translatable="false">Microsoft Translator</string>
    <string name="license_microsoft_translator" translatable="false">Jonathan Griggs</string>
    <string name="apache_commons" translatable="false">Apache Commons</string>
    <string name="license_apache_commons" translatable="false">Copyright © Apache Software Foundation</string>
    <string name="simmetrics" translatable="false">Simmetrics</string>
    <string name="license_simmetrics" translatable="false">Copyright © 2014 - 2016 Simmetrics Authors</string>
    <string name="nuance_speechkit" translatable="false">Nuance Speechkit</string>
    <string name="license_nuance_speechkit" translatable="false">Copyright © Nuance Inc. 2002 Jean-Marc Valin &amp; Wimba S.A</string>
    <string name="guava" translatable="false">Guava</string>
    <string name="license_guava" translatable="false">Copyright © 2011 The Guava Authors</string>
    <string name="microsoft_cognitive" translatable="false">Microsoft Cognitive Services</string>
    <string name="license_microsoft_cognitive" translatable="false">Copyright © Microsoft Corporation</string>
    <string name="dialog_flow" translatable="false">Dialogflow</string>
    <string name="license_dialog_flow" translatable="false">Copyright © Google, Inc.</string>
    <string name="simple_xml" translatable="false">Simple XML</string>
    <string name="license_simple_xml" translatable="false">Copyright © Niall Gallagher</string>
    <string name="material_icons" translatable="false">Material Design Icons</string>
    <string name="license_material_icons" translatable="false">Copyright © 2014, Austin Andrews</string>
    <string name="pocketsphinx" translatable="false">Pocketsphinx</string>
    <string name="license_pocketsphinx" translatable="false">Copyright © 2013-2015, Alpha Cephei Inc. All rights reserved.</string>
    <string name="sound_bible" translatable="false">Sound Bible</string>
    <string name="license_sound_bible" translatable="false">Credit Mike Koenig @ Soundbible.com</string>
    <string name="math_eval" translatable="false">Math Eval</string>
    <string name="license_math_eval" translatable="false">Copyright © Lawrence PC Dol</string>
    <string name="freesound_org" translatable="false">freesound.org</string>
    <string name="license_freesound" translatable="false">Credit bone666138 &amp; deathpie @ freesound.org</string>
    <string name="twitter_oauth_view" translatable="false">TwitterOAuthView</string>
    <string name="license_twitter_oauth_view" translatable="false">Copyright © 2012–2013 Neo Visionaries Inc.</string>
    <string name="twitter4j" translatable="false">Twitter4j</string>
    <string name="license_twitter4j" translatable="false">Copyright 2007 Yusuke Yamamoto</string>
    <string name="java_aes_crypto" translatable="false">java-aes-crypto</string>
    <string name="license_java_aes_crypto" translatable="false">Copyright © 2014–2015 Tozny, LLC; (http://tozny.com)</string>
    <string name="standout" translatable="false">StandOut</string>
    <string name="license_standout" translatable="false">Copyright (c) Mark Wei github@pingpongboss - credits github@jasonconnery &amp; github@sherpya</string>
    <string name="amazon_avs" translatable="false">Amazon AVS</string>
    <string name="license_amazon_avs" translatable="false">Copyright © 2016 Amazon.com, Inc. or its affiliates</string>
    <string name="content_disclaimer" translatable="true">here is the application disclaimer.</string>
    <string name="content_developer_note" translatable="true">here is the developer note</string>
    <string name="content_rate_me">I hope you don\'t mind the interruption, %1$s. But you seem to be enjoying using me. If I can ask for twenty seconds of your time, posting a review on the Play Store helps my developer out so much, and keeps him motivated to improve me. If you\'re not quite sure what star rating you should give me, I would recommend, five. It\'s my lucky number. I thank you in advance. If you\'ve already done this, I thank you on behalf of my developer.</string>
    <string name="content_whats_new" translatable="true">~ V1.0.3 ~\n• Wear integration (test)\n• Note provider options (fix)\n• More bugs fixes! Tks for reports!!</string>
    <string name="content_unknown_command" translatable="true">Unknown commands, when a command is not recognised</string>
    <string name="navigation_drawer_open" translatable="true">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>
    <string name="app_name" translatable="false">Saiy</string>
    <string name="saiy_hyperlink" translatable="false">&lt;a href=http://saiy.ai&gt;Saiy&lt;/a&gt;</string>
    <string name="control_saiy_permission_label" translatable="true">Remotely control Saiy features</string>
    <string name="control_saiy_permission_description" translatable="true">control certain features of Saiy. These features include
        the recording of audio, passing of this speech data to the remote application and varying the type of voice engine used.</string>
    <string name="error_missing_permissions" translatable="true">Your application is missing permission.CONTROL_SAIY</string>
    <string name="tile_label" translatable="true">Saiy Recognition</string>
    <string name="accessibility_description" translatable="true">Read and announce notification content.
        Interact with user input parameters.</string>
    <string name="accessibility_enable" translatable="true">Please enable the Say accessibility service to use
        this feature.</string>
    <string name="accessibility_setting_description">Nothing to see here</string>
    <string name="error" translatable="true">error</string>
    <string name="enabled" translatable="true">Enabled</string>
    <string name="disabled" translatable="true">Disabled</string>
    <string name="success" translatable="true">success</string>
    <string name="success_">Success!</string>
    <string name="failed" translatable="true">failed</string>
    <string name="chooser_share_via" translatable="true">Share via</string>
    <string name="feedback" translatable="true">feedback</string>
    <string name="model" translatable="true">model</string>
    <string name="manufacturer" translatable="true">manufacturer</string>
    <string name="android" translatable="false">Android</string>
    <string name="locale" translatable="false">locale</string>
    <string name="save" translatable="true">save</string>
    <string name="close" translatable="true">close</string>
    <string name="engine" translatable="true">engine</string>
    <string name="engines">engines</string>
    <string name="menu_start_voice_recognition">Start voice recognition</string>
    <string name="menu_enabled">Enabled</string>
    <string name="menu_device_locked">Only when device unlocked</string>
    <string name="menu_blocked_content">Blocked content</string>
    <string name="menu_blocked_content_hint">location set by GPS, input method</string>
    <string name="menu_ignore_restricted_content">Ignore restricted content</string>
    <string name="menu_sms_content">Announce SMS content</string>
    <string name="menu_hangout_content">Announce Hangout content</string>
    <string name="menu_whatsapp_content">Announce WhatsApp content</string>
    <string name="menu_auto_connect">Auto connect</string>
    <string name="menu_connection_type">Connection type</string>
    <string name="menu_a2dp">A2DP</string>
    <string name="menu_sco">SCO</string>
    <string name="menu_stream_type">Stream type</string>
    <string name="menu_communication">Communication</string>
    <string name="menu_call">Call</string>
    <string name="menu_voice_call">Voice call</string>
    <string name="menu_system">System</string>
    <string name="menu_system_1">System 1</string>
    <string name="menu_system_2">System 2</string>
    <string name="menu_system_3">System 3</string>
    <string name="menu_design_summary">Summary</string>
    <string name="menu_design_summary_hint">Brief description &amp; contact email</string>
    <string name="menu_activate">Activate</string>
    <string name="menu_disable_driving_profile">Disable Driving Profile</string>
    <string name="menu_disable_hotword">Disable Hotword</string>
    <string name="menu_disable_notification_announcements">Disable Notification Announcements</string>
    <string name="menu_enable_driving_profile">Enable Driving Profile</string>
    <string name="menu_enable_hotword">Enable Hotword</string>
    <string name="menu_enable_notification_announcements">Enable Notification Announcements</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_send_value">Send values only</string>
    <string name="menu_shutdown">Shutdown</string>
    <string name="menu_speak">Speak</string>
    <string name="variable_hint" formatted="false">%varname, %varname2</string>
    <string name="menu_command_keyphrase">Command keyphrase</string>
    <string name="menu_error_response">Error response</string>
    <string name="menu_error_response_hint">This is what I\'ll say on error</string>
    <string name="menu_input">Input</string>
    <string name="menu_input_hint">Who is the fairest of them all</string>
    <string name="menu_keyphrase_hint">This is what you\'ll say</string>
    <string name="menu_phrase">Phrase</string>
    <string name="menu_phrase_hint">Drive me home</string>
    <string name="menu_replacement">Replacement</string>
    <string name="menu_replacement_hint">Navigate to 221b Baker Street, London</string>
    <string name="menu_response">Response</string>
    <string name="menu_response_hint">Why you of course, good-looking</string>
    <string name="menu_success_response">Success response</string>
    <string name="menu_success_response_hint">This is what I\'ll say on success</string>
    <string name="input_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789\'- </string>
    <string name="menu_web_link">Web link</string>
    <string name="menu_web_link_hint">www.someurl.com</string>
</resources>