<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rgTaskerAction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_vertical_margin">
    <RadioButton
        android:id="@+id/rbEnableHotword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/menu_enable_hotword"/>
    <RadioButton
        android:id="@+id/rbDisableHotword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_disable_hotword"/>
    <RadioButton
        android:id="@+id/rbEnableDrivingProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_enable_driving_profile"/>
    <RadioButton
        android:id="@+id/rbDisableDrivingProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_disable_driving_profile"/>
    <RadioButton
        android:id="@+id/rbEnableNotificationAnnouncements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_enable_notification_announcements"/>
    <RadioButton
        android:id="@+id/rbDisableNotificationAnnouncements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_disable_notification_announcements"/>
    <RadioButton
        android:id="@+id/rbActivate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_activate"/>
    <RadioButton
        android:id="@+id/rbShutdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_shutdown"/>
</RadioGroup>
