<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:textColor="@color/colorPrimary"
            android:id="@+id/cbAutoConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/menu_auto_connect"/>
        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvConnectionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/menu_connection_type"/>
        <RadioGroup
            android:id="@+id/rgConnectionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">
            <RadioButton
                android:id="@+id/rbConnectionTypeA2DP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/menu_a2dp"/>
            <RadioButton
                android:id="@+id/rbConnectionSCO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_sco"/>
        </RadioGroup>
        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvStreamType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/menu_stream_type"/>
        <RadioGroup
            android:id="@+id/rgStreamType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">
            <RadioButton
                android:id="@+id/rbStreamCommunication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/menu_communication"/>
            <RadioButton
                android:id="@+id/rbStreamCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_call"/>
            <RadioButton
                android:id="@+id/rbStreamVoiceCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_voice_call"/>
        </RadioGroup>
        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/menu_system"/>
        <RadioGroup
            android:id="@+id/rgSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">
            <RadioButton
                android:id="@+id/rbSystem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/menu_system_1"/>
            <RadioButton
                android:id="@+id/rbSystem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_system_2"/>
            <RadioButton
                android:id="@+id/rbSystem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_system_3"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>
