<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvBlockedContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_blocked_content"/>
    <EditText
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_gravity="center_vertical"
        android:id="@+id/etBlockedContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/menu_blocked_content_hint"
        android:ems="10"
        android:inputType="text"/>
    <CheckBox
        android:textColor="@color/colorPrimary"
        android:id="@+id/cbEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_enabled"/>
    <CheckBox
        android:textColor="@color/colorPrimary"
        android:id="@+id/cbDeviceLocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_device_locked"/>
    <CheckBox
        android:textColor="@color/colorPrimary"
        android:id="@+id/cbRestricted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_ignore_restricted_content"/>
    <CheckBox
        android:textColor="@color/colorPrimary"
        android:id="@+id/cbSMSContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_sms_content"/>
    <CheckBox
        android:textColor="@color/colorPrimary"
        android:id="@+id/cbHangoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_hangout_content"/>
    <CheckBox
        android:textColor="@color/colorPrimary"
        android:id="@+id/cbWhatsAppContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_whatsapp_content"/>
</LinearLayout>
