<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_input"/>
    <EditText
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_gravity="center_vertical"
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/menu_input_hint"
        android:ems="10"
        android:digits="@string/input_digits"
        android:inputType="text"/>
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_response"/>
    <EditText
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_gravity="center_vertical"
        android:id="@+id/etResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/menu_response_hint"
        android:ems="10"
        android:inputType="text"/>
    <CheckBox
        android:textColor="@color/colorPrimary"
        android:id="@+id/cbVoiceRecognition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_start_voice_recognition"/>
</LinearLayout>
