<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_phrase"/>
    <EditText
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_gravity="center_vertical"
        android:id="@+id/etPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/menu_phrase_hint"
        android:ems="10"
        android:digits="@string/input_digits"
        android:inputType="text"/>
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvReplacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_replacement"/>
    <EditText
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_gravity="center_vertical"
        android:id="@+id/etReplacement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/menu_replacement_hint"
        android:ems="10"
        android:inputType="text"/>
</LinearLayout>
