<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/etTaskerInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:hint="@string/variable_hint"
        android:ems="10"
        android:inputType="text"/>
    <RadioGroup
        android:id="@+id/rgTaskerAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">
        <RadioButton
            android:id="@+id/rbValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/menu_send_value"/>
        <RadioButton
            android:id="@+id/rbSpeak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_speak"/>
        <RadioButton
            android:id="@+id/rbNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_notification"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/cbTaskerStartListening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/menu_start_voice_recognition"/>
</LinearLayout>
