<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Spinner
        android:textColor="@color/colorPrimary"
        android:entries="@array/array_design_options"
        android:layout_gravity="center_vertical"
        android:id="@+id/spDesign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-smallcaps"/>
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvWebLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_web_link"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="150">
        <EditText
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="center_vertical"
            android:id="@+id/etWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/menu_web_link_hint"
            android:ems="10"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_vertical"
        android:id="@+id/tvDesignSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/menu_design_summary"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDesignSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="500">
        <EditText
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="center_vertical"
            android:id="@+id/etDesignSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/menu_design_summary_hint"
            android:ems="10"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
